--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'com.android.application'
 }
 
+ext {
+    jtransformsVersion = '3.1'
+    jtransformsVersion1 = jtransformsVersion
+}
+
 android {
     namespace 'com.example.myapplication'
     compileSdk 32
@@ -32,7 +37,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -42,5 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation "com.github.wendykierp:JTransforms:$jtransformsVersion1"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
